--- a/analysis/Point_process/Point_Process.Rmd
+++ b/analysis/Point_process/Point_Process.Rmd
@@ -11,13 +11,13 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 
 if (!require("RColorBrewer")) {
-install.packages("RColorBrewer")
-library(RColorBrewer)
+  install.packages("RColorBrewer")
+  library(RColorBrewer)
 }
 
 if (!require("MASS")) {#fitdistr
-install.packages("MASS")
-library(MASS)
+  install.packages("MASS")
+  library(MASS)
 }
 
 #Modelling and Validation of Non Homogeneous Poisson Processes
@@ -27,11 +27,27 @@ if (!require("NHPoisson")) {
 }
 
 if (!require("ztable")) {
-install.packages("ztable")
-library(ztable)
+  install.packages("ztable")
+  library(ztable)
 }
 
 options(ztable.type = "html")
+
+if (!require("pracma")) {#for integral2 (double integral)
+  install.packages("pracma")
+  library(pracma)
+}
+
+# if (!require("PairedData")) {#for plotting paired data boxplot
+#   install.packages("PairedData")
+#   library(PairedData)
+# }
+
+
+if (!require("ggpubr")) {#for boxplot
+  install.packages("ggpubr")
+  library(ggpubr)
+}
 
 source("HawkesFunctions.R")
 source("Spatial_temporal_hawkes_fx.R")
@@ -283,7 +299,7 @@ The scaled version (Pearson $h(u)=\frac{1}{\sqrt{\lambda(u)}}$):
 
 $$
 \begin{aligned}
-R'(t_i) &= \sum_{j=1}^{t_i} h(t_i)*1 -  \int_{0}^{t_i} h(u) \lambda(u)  du \\
+R_P(t_i) &= \sum_{j=1}^{t_i} h(t_i)*1 -  \int_{0}^{t_i} h(u) \lambda(u)  du \\
 &= \sum_{j=1}^{t_i} \frac{1}{\sqrt{{\lambda(t_i)}}} -  \int_{0}^{t_i} \sqrt{\lambda(u)} du
 \end{aligned}
 $$
@@ -291,7 +307,7 @@ $$
 The Pearson residual in the time interval $(t_i,t_{i+1}]$:
 $$
 \begin{aligned}
-r_{pearson}(t_i,t_{i+1}) &= \frac{1}{t_{i+1}-t_i}(R'(t_{i+1}) - R'(t_{i}))\\
+r_{pearson}(t_i,t_{i+1}) &= \frac{1}{t_{i+1}-t_i}(R_P(t_{i+1}) - R_P(t_{i}))\\
 &=  \frac{1}{t_{i+1}-t_i}(\frac{1}{\sqrt{{\lambda(t_{i+1})}}} - \int_{t_i}^{t_{i+1}} \sqrt{\lambda(u)} du)
 \end{aligned}
 $$
@@ -361,17 +377,6 @@ for(folder_i in 1:length(all_folders_name_short)){
     HP_alpha <- hawkes.par$par[2]
     HP_beta <- hawkes.par$par[3]
     
-    # Lambda.test<-uniHawkesCompensator.Owen(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,times_i)
-    # Lambda.test <- Lambda.test[-1]
-    # same as below
-    
-    Lambda.test<-uniHawkesCompensator(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,
-                                      times_i)#different def of compensator than compensator_old
-    
-    ks.test(Lambda.test,"pexp")
-    
-    
-    
     ## Histogram of inter-event times fitted by exponential dist
     #estimate the parameters for exponential dist
     fit_exp <- fitdistr(inter_event_time, "exponential") 
@@ -379,21 +384,26 @@ for(folder_i in 1:length(all_folders_name_short)){
     curve(dexp(x, rate = fit_exp$estimate), from = 0, col = "red", add = TRUE)
     
     
-    
-    
+    # Lambda.test<-uniHawkesCompensator.Owen(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,times_i)
+    # Lambda.test <- Lambda.test[-1]
+    # same as below
+    Lambda.test<-uniHawkesCompensator(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,
+                                      times_i)#different def of compensator than compensator_old
+
+
     ## QQ Plot using inter-event times
     p <- ppoints(100)    # 100 equally spaced points on (0,1), excluding endpoints
     q <- quantile(Lambda.test,p=p,na.rm=TRUE) # percentiles of the sample distribution
     plot(qexp(p),q, xlab="Theoretical Quantiles",ylab="Empirical Quantiles",cex.lab=1.2,
           pch=1,cex=1.1,col="Black", main = "Hawkes Process \n Q-Q Plot")
     qqline(q, distribution=qexp,col="Red", lty=1, lwd=2.5)
-    
+
     #folder name should be printed at top (side=3) of 2nd subplot
     mtext(folder_name_i, side=3, line=5)
     #https://www.r-graph-gallery.com/74-margin-and-oma-cheatsheet.html
-    
-    
-    
+
+
+
     ## KS Statistic
     ks_pp <- ks.test(Lambda.test,"pexp")
     # Warning message:
@@ -401,20 +411,19 @@ for(folder_i in 1:length(all_folders_name_short)){
     #   ties should not be present for the Kolmogorov-Smirnov test
     # Interpretation: The K-S test is for a "continuous distribution" and so your data should not contain any ties (repeated values).
     # (exponetial dist is "continuous")
-    # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and 
-    
+    # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and
+
     ## KS Plot
     #empirical CDF
     plot(ecdf(Lambda.test),do.points=FALSE, col.01line = "white", verticals=TRUE,col="Black", lwd=3, ylim=c(0,1),
-        xlab= expression(paste(Lambda,"(",t[i],",",t[i+1],")")),ylab="CDF", 
+        xlab= expression(paste(Lambda,"(",t[i],",",t[i+1],")")),ylab="CDF",
        main = paste("CDF of Inter-Event Times \n p-val=",round(ks_pp$p.value,2), ",\n K-S statistic (D)=",round(ks_pp$statistic,2)))
-    
+
     #exponential CDF
     curve(pexp(x,1), min(Lambda.test),max(Lambda.test),col="Red", lty=1, lwd =2, add=TRUE,cex.lab=1.2)
-    
+
     legend("bottomright",c("Exponential CDF","Empirical CDF"),lty=c(1,1),lwd=1,col=c("Red","Black"),
            bty="n",cex=0.7)
-    
     
     ## Residual plot
     raw_res <- Raw_Res_Hawkes(compen=Lambda.test,N_t=1:(length(inter_event_time)+1))#N_t=1:n because we assumed there's only one event per img
@@ -422,6 +431,55 @@ for(folder_i in 1:length(all_folders_name_short)){
     inter_event_dist <- inter_event_dist_time$inter_event_col_dist
     plot(inter_event_dist,raw_res_drop1, main = "Residual vs \n Inter-Event Distance")
     abline(h=0,col="red")
+    
+    
+    # #ideally~Poisson(1)
+    # #doesn't really work for QQplot and KS because poisson is discrete
+    # Lambda.test<-uniHawkesCompensatorPoisson(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,
+    #                                   times_i)#different def of compensator than compensator_old
+    # 
+    # 
+    # ## QQ Plot using inter-event times
+    # p <- ppoints(100)    # 100 equally spaced points on (0,1), excluding endpoints
+    # q <- quantile(Lambda.test,p=p,na.rm=TRUE) # percentiles of the sample distribution
+    # plot(qpois(p,lambda=1),q, xlab="Theoretical Quantiles",ylab="Empirical Quantiles",cex.lab=1.2,
+    #       pch=1,cex=1.1,col="Black", main = "Hawkes Process \n Q-Q Plot")
+    # qqline(q, distribution=function(p) qpois(p, lambda = 1),col="Red", lty=1, lwd=2.5)#doesn't work 
+    # 
+    # #folder name should be printed at top (side=3) of 2nd subplot
+    # mtext(folder_name_i, side=3, line=5)
+    # #https://www.r-graph-gallery.com/74-margin-and-oma-cheatsheet.html
+    # 
+    # 
+    # 
+    # ## KS Statistic
+    # ks_pp <- ks.test(Lambda.test,"ppois",1)
+    # # Warning message:
+    # # In ks.test(lambda_res, "pexp") :
+    # #   ties should not be present for the Kolmogorov-Smirnov test
+    # # Interpretation: The K-S test is for a "continuous distribution" and so your data should not contain any ties (repeated values).
+    # # (exponetial dist is "continuous")
+    # # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and 
+    # 
+    # ## KS Plot
+    # #empirical CDF
+    # plot(ecdf(Lambda.test),do.points=FALSE, col.01line = "white", verticals=TRUE,col="Black", lwd=3, ylim=c(0,1),
+    #     xlab= expression(paste(Lambda,"(",t[i],")")),ylab="CDF", 
+    #    main = paste("CDF of Inter-Event Times \n p-val=",round(ks_pp$p.value,2), ",\n K-S statistic (D)=",round(ks_pp$statistic,2)))
+    # 
+    # #exponential CDF
+    # curve(ppois(x,1), min(Lambda.test),max(Lambda.test),col="Red", lty=1, lwd =2, add=TRUE,cex.lab=1.2)
+    # 
+    # legend("bottomright",c("Poisson(1) CDF","Empirical CDF"),lty=c(1,1),lwd=1,col=c("Red","Black"),
+    #        bty="n",cex=0.7)
+    # 
+    # 
+    # ## Residual plot
+    # raw_res <- Raw_Res_Hawkes(compen=Lambda.test[2:length(Lambda.test)],N_t=1:(length(inter_event_time)+1))#N_t=1:n because we assumed there's only one event per img
+    # raw_res_drop1 <- raw_res[-1]#drop R(t_1)
+    # inter_event_dist <- inter_event_dist_time$inter_event_col_dist
+    # plot(inter_event_dist,raw_res_drop1, main = "Residual vs \n Inter-Event Distance")
+    # abline(h=0,col="red")
     
     
     ## Pearson Residual
@@ -449,10 +507,11 @@ row.names(all_HP_param) <- all_folders_name_short[unique(all_HP_param$folder_ind
 all_HP_param$not_few_emb <- 1.0
 all_HP_param$not_few_emb[few_emb_folders] <- 0.2#determines how transparent the bar will be when plotted
 
-print("folders didn't converge (index and foldername):")
-print(not_conv_list)
-print(all_folders_name_short[not_conv_list])
-
+if(length(not_conv_list)>0){
+  print("folders didn't converge (index and foldername):")
+  print(not_conv_list)
+  print(all_folders_name_short[not_conv_list])
+}
 
 print(all_HP_param)
 ```
@@ -504,7 +563,7 @@ col_keep <- c("folder_index","species.x","KS_pval.y","KS_pval.x","num_emb_img","
 pval_2_methods <- param_2_methods[col_keep]#select certain columns (with the same order as col_keep)
 colnames(pval_2_methods) <- c("folder_index","species","KS_pval_PP","KS_pval_HP","num_emb_img","converge_HP")
 pval_2_methods$incr_p_val <- pval_2_methods$KS_pval_HP - pval_2_methods$KS_pval_PP
-#pval_2_methods <- pval_2_methods[,c(1,2,5,3,6,4,7)]#change the order of column for better printing
+row.names(pval_2_methods) <- all_folders_name_short[pval_2_methods$folder_index]
 ztable(pval_2_methods,caption="Change in P-values (Poisson vs Hawkes Process)") %>%
     addRowColor(rows=1,bg="#C90000",color="white") %>%
     addCellColor(condition=incr_p_val>0.0,cols=incr_p_val,color="emerald") %>%
@@ -518,14 +577,58 @@ As expected, the K-S p-value increases in most cases, as Hawkes process should h
 
 
 
-## Spatio-Temporal Hawkes Process
+<!-- ## Spatiotemporal Hawkes Process -->
+
+<!-- Let $s_1,..,s_n$ denote the event locations. -->
+
+<!-- Conditional intensity: -->
+
+<!-- $$ -->
+<!-- \lambda(s,t) = \lambda_0 + \alpha \sum_{i:t_i < t} e^{-\beta(t-t_i)} e^{-\gamma(s-s_i)} -->
+<!-- $$ -->
+
+<!-- $\lambda_0,\alpha \geq 0$ and $\beta,\gamma > 0$ -->
+
+<!-- For every experiment, I normalized event locations ($s_i$) to [0,1]. -->
+
+<!-- Log-likelihood: -->
+
+<!-- $$ -->
+<!-- \begin{aligned} -->
+<!-- l(t_1...,t_n, s_1,...,s_n) &= - \int_{0}^{t_n} \int_{0}^{1} \lambda(s,t) ds dt + \sum_{i=1}^{n} \log(\lambda(s_i,t_i)) \\ -->
+<!-- &=  -\lambda_0 t_n - \frac{\alpha}{\beta \gamma} \sum_{i=1}^{n} (e^{-\beta(t_n-t_i)}-1)(e^{-\gamma(1-s_i)}-e^{-\gamma(0-s_i)}) + \sum_{i=1}^{n} \log (\lambda_0 + \alpha \sum_{k:t_k < t_i} e^{-\beta(t_i-t_k)}e^{-\gamma(s_i-s_k)}) -->
+<!-- \end{aligned} -->
+<!-- $$ -->
+
+<!-- *Reference: A Review of Self-Exciting Spatio-Temporal Point Processes and Their Applications (2018) Eq(8)* -->
+
+
+
+
+<!-- The durations of the estimated residual process: -->
+
+<!-- $$ -->
+<!-- \begin{aligned} -->
+<!-- \Lambda(t_i,t_{i+1}) &=  \int_{t_i}^{t_{i+1}}  \int_{0}^{1} \lambda(s,t) ds dt\\ -->
+<!-- &= \int_{t_i}^{t_{i+1}}  \lambda_0 dt + \alpha \int_{t_i}^{t_{i+1}} \int_{0}^{1} \sum_{k:t_k < t} e^{-\beta(t-t_k)} e^{-\gamma(s-s_k)} ds dt \\ -->
+<!-- &= \lambda_0 (t_{i+1} - t_i) + \alpha \sum_{k=1}^{i} \int_{t_i}^{t_{i+1}} e^{-\beta(t-t_k)} \int_{0}^{1}  e^{-\gamma(s-s_k)} ds dt \\ -->
+<!-- &= \lambda_0 (t_{i+1} - t_i) - \frac{\alpha}{\gamma} \sum_{k=1}^{i} \int_{t_i}^{t_{i+1}} e^{-\beta(t-t_k)} (e^{-\gamma(1-s_k)} - e^{-\gamma(0-s_k)}) dt   \\ -->
+<!-- &= \lambda_0 (t_{i+1} - t_i) + \frac{\alpha}{\beta \gamma} \sum_{k=1}^{i} (e^{-\beta(t_{i+1}-t_k)} - e^{-\beta(t_{i}-t_k)}) (e^{-\gamma(1-s_k)} - e^{-\gamma(0-s_k)})  -->
+<!-- \end{aligned} -->
+<!-- $$ -->
+<!-- In the reference below, it only mentioned that $\Lambda(t_i) = \int_{0}^{t_{i}}  \int_{0}^{1} \lambda(s,t) ds dt$ would be a unit rate Poisson process. -->
+<!-- So, the above might not necessarily follows unit rate exponential distribution. -->
+
+<!-- *Reference: A semi-parametric spatiotemporal Hawkes-type point process model with periodic background for crime data (2018)* -->
+
+## Spatiotemporal Hawkes Process (absolute location difference)
 
 Let $s_1,..,s_n$ denote the event locations.
 
 Conditional intensity:
 
 $$
-\lambda(s,t) = \lambda_0 + \alpha \sum_{i:t_i < t} e^{-\beta(t-t_i)} e^{-\gamma(s-s_i)}
+\lambda(s,t) = \lambda_0 + \alpha \sum_{i:t_i < t} e^{-\beta(t-t_i)} e^{-\gamma|s-s_i|}
 $$
 
 $\lambda_0,\alpha \geq 0$ and $\beta,\gamma > 0$
@@ -537,7 +640,11 @@ Log-likelihood:
 $$
 \begin{aligned}
 l(t_1...,t_n, s_1,...,s_n) &= - \int_{0}^{t_n} \int_{0}^{1} \lambda(s,t) ds dt + \sum_{i=1}^{n} \log(\lambda(s_i,t_i)) \\
-&=  -\lambda_0 t_n - \frac{\alpha}{\beta \gamma} \sum_{i=1}^{n} (e^{-\beta(t_n-t_i)}-1)(e^{-\gamma(1-s_i)}-e^{-\gamma(0-s_i)}) + \sum_{i=1}^{n} \log (\lambda_0 + \alpha \sum_{k:t_k < t_i} e^{-\beta(t_i-t_k)}e^{-\gamma(s_i-s_k)})
+&= - \int_{0}^{t_n} [\int_{0}^{s_i} \lambda(s,t) ds +  \int_{s_i}^{1} \lambda(s,t) ds ]dt + \sum_{i=1}^{n} \log(\lambda(s_i,t_i)) \\
+&= - \int_{0}^{t_n} \lambda_0 + \alpha \sum_{i:t_i < t} e^{-\beta(t-t_i)}[\int_{0}^{s_i} e^{-\gamma|s-s_i|} ds +  \int_{s_i}^{1} e^{-\gamma|s-s_i|} ds ]dt + \sum_{i=1}^{n} \log(\lambda(s_i,t_i)) \\
+&= - \int_{0}^{t_n} \lambda_0 + \alpha \sum_{i:t_i < t} e^{-\beta(t-t_i)}[\int_{0}^{s_i} e^{-\gamma(s_i-s)} ds +  \int_{s_i}^{1} e^{-\gamma(s-s_i)} ds ]dt + \sum_{i=1}^{n} \log(\lambda(s_i,t_i)) \\
+&= - \int_{0}^{t_n} \lambda_0 + \alpha \sum_{i:t_i < t} e^{-\beta(t-t_i)}[e^{-\gamma s_i} \frac{1}{\gamma} (e^{\gamma s_i} - e^{\gamma * 0}) - \frac{1}{\gamma} (e^{-\gamma(1-s_i)} - 1)]dt + \sum_{i=1}^{n} \log(\lambda(s_i,t_i)) \\
+&=  -\lambda_0 t_n - \frac{\alpha}{\beta \gamma} \sum_{i=1}^{n} (e^{-\beta(t_n-t_i)}-1)(-2 + e^{-\gamma s_i} + e^{-\gamma(1-s_i)}) + \sum_{i=1}^{n} \log (\lambda_0 + \alpha \sum_{k:t_k < t_i} e^{-\beta(t_i-t_k)}e^{-\gamma|s_i-s_k|})
 \end{aligned}
 $$
 
@@ -549,22 +656,57 @@ The durations of the estimated residual process:
 $$
 \begin{aligned}
 \Lambda(t_i,t_{i+1}) &=  \int_{t_i}^{t_{i+1}}  \int_{0}^{1} \lambda(s,t) ds dt\\
-&= \int_{t_i}^{t_{i+1}}  \lambda_0 dt + \alpha \int_{t_i}^{t_{i+1}} \int_{0}^{1} \sum_{k:t_k < t} e^{-\beta(t-t_k)} e^{-\gamma(s-s_k)} ds dt \\
-&= \lambda_0 (t_{i+1} - t_i) + \alpha \sum_{k=1}^{i} \int_{t_i}^{t_{i+1}} e^{-\beta(t-t_k)} \int_{0}^{1}  e^{-\gamma(s-s_k)} ds dt \\
-&= \lambda_0 (t_{i+1} - t_i) - \frac{\alpha}{\gamma} \sum_{k=1}^{i} \int_{t_i}^{t_{i+1}} e^{-\beta(t-t_k)} (e^{-\gamma(1-s_k)} - e^{-\gamma(0-s_k)}) dt   \\
-&= \lambda_0 (t_{i+1} - t_i) + \frac{\alpha}{\beta \gamma} \sum_{k=1}^{i} (e^{-\beta(t_{i+1}-t_k)} - e^{-\beta(t_{i}-t_k)}) (e^{-\gamma(1-s_k)} - e^{-\gamma(0-s_k)}) 
+&= \int_{t_i}^{t_{i+1}}  \lambda_0 dt + \alpha \int_{t_i}^{t_{i+1}} \int_{0}^{1} \sum_{k:t_k < t} e^{-\beta(t-t_k)} e^{-\gamma|s-s_k|} ds dt \\
+&= \lambda_0 (t_{i+1} - t_i) + \alpha \sum_{k=1}^{i} \int_{t_i}^{t_{i+1}} e^{-\beta(t-t_k)} \int_{0}^{1}  e^{-\gamma|s-s_k|} ds dt \\
+&= \lambda_0 (t_{i+1} - t_i) - \frac{\alpha}{\gamma} \sum_{k=1}^{i} \int_{t_i}^{t_{i+1}} e^{-\beta(t-t_k)} (-2 + e^{-\gamma s_k} + e^{-\gamma(1-s_k)}) dt   \\
+&= \lambda_0 (t_{i+1} - t_i) + \frac{\alpha}{\beta \gamma} \sum_{k=1}^{i} (e^{-\beta(t_{i+1}-t_k)} - e^{-\beta(t_{i}-t_k)}) (-2 + e^{-\gamma s_k} + e^{-\gamma(1-s_k)})
 \end{aligned}
 $$
+
+In the reference below, it only mentioned that $\Lambda(t_i) = \int_{0}^{t_{i}}  \int_{0}^{1} \lambda(s,t) ds dt$ would be a unit rate Poisson process.
+**So, the above might not necessarily follows unit rate exponential distribution.**
+
+*Reference: A semi-parametric spatiotemporal Hawkes-type point process model with periodic background for crime data (2018)*
+
+Pearson Residual:
+
+$$
+\begin{aligned}
+R_P(B_i) &=  \sum_{(s_j,t_j)\in B_i} \frac{1}{\sqrt{{\lambda(s_j,t_j)}}} -  \int_{B_i} \sqrt{\lambda(s,t)} dt ds
+\end{aligned}
+$$
+
+*Reference: Residual analysis methods for space-time point processes with applications to earthquake forecast models in California (2011) [the eq after Eq(1)]*
+
+*Reference: Second-order residual analysis of spatiotemporal point processes and applications in model evaluation by Zhuang(2006)*
+
+(I inferred the ones below...)
+
+To compare with Temporal Hawkes Process Pearson Residual, let's consider $B_i = [0,1] \times[0,t_i]$.
+
+The Pearson residual in the time interval $(t_i,t_{i+1}]$:
+
+$$
+\begin{aligned}
+R_P(B_i) &=  \sum_{j=1}^{i} \frac{1}{\sqrt{{\lambda(s_j,t_j)}}} -  \int_{0}^{t_i} \int_{0}^{1} \sqrt{\lambda(s,t)} ds dt\\
+
+r_{pearson}(t_i,t_{i+1}) &= \frac{1}{t_{i+1}-t_i}(R_P(B_{i+1}) - R_P(B_{i}))\\
+&=  \frac{1}{t_{i+1}-t_i}(\frac{1}{\sqrt{{\lambda(s_{i+1},t_{i+1})}}} - \int_{t_i}^{t_{i+1}} \int_{0}^{1}\sqrt{\lambda(s,t)} ds dt)
+\end{aligned}
+$$
+
+
+
 
 ```{r STHP, warning=FALSE}
 max_plot_row <- 2
 all_STHP_param <- NULL
 not_conv_list <- NULL
-
+all_STHP_pear_res <- NULL
 for(folder_i in 1:length(all_folders_name_short)){
-  if(folder_i%%max_plot_row==1){# a new fig
-    par(mfrow=c(max_plot_row,3),mar=c(5,4,7,3))#,oma = c(0, 0, 2, 0))# outer margin area (bottom,left,top,right)
-  }
+  # if(folder_i%%max_plot_row==1){# a new fig
+  #   par(mfrow=c(max_plot_row,3),mar=c(5,4,7,3))#,oma = c(0, 0, 2, 0))# outer margin area (bottom,left,top,right)
+  # }
   folder_name_i<- all_folders_name_short[folder_i]
   inter_event_dist_time <- all_inter_event_dist_time[all_inter_event_dist_time$folder_name == folder_name_i,]
   inter_event_time <- inter_event_dist_time$inter_event_time.min.
@@ -583,13 +725,27 @@ for(folder_i in 1:length(all_folders_name_short)){
   
   ## fit hawkes process
   #try different initialize value if doesn't converge
+  havenot_conv <- TRUE
   beta_initial_cand <- c(0.01,0.1,0.3)
-  for(beta_initial in beta_initial_cand){
-    hawkes.par<-optim(par=c(rep(0.01,2),rep(beta_initial,2)), fn=STHawkesNegLogLik,
-                    t=times_i, s=col_pos_norm, control = list(maxit = 1000), lower=c(rep(0,2),rep(1e-10,2))  )#lower: to constrain the parameter space
-     if(hawkes.par$convergence==0){#no need to try other beta_initial if already converges
-       break
-     }
+  gamma_initial_cand <- c(0.01,0.1,0.3)
+  for(gamma_initial in gamma_initial_cand){#ocoleu2_stem needs this
+    if(havenot_conv){
+      for(beta_initial in beta_initial_cand){
+      hawkes.par<-optim(par=c(rep(0.01,2),beta_initial,gamma_initial), fn=STHawkesNegLogLik,
+                        t=times_i, s=col_pos_norm, control = list(maxit = 1000), lower=c(rep(0,2),rep(1e-10,2))  )#lower: to constrain the parameter space
+       if(hawkes.par$convergence==0){#no need to try other initial value if already converges
+         havenot_conv <- FALSE
+         break
+       }
+      #debugging
+      # else{
+      #    print(paste(folder_i,hawkes.par$convergence))
+      #  }
+      }
+    }else{
+      break
+    }
+    
   }
   
   
@@ -600,8 +756,9 @@ for(folder_i in 1:length(all_folders_name_short)){
     #0 indicates successful convergence
     #1 indicates that the iteration limit maxit had been reached
     
-    #print("didn't converge:")
-    #print(folder_name_i)
+    print("didn't converge:")
+    print(folder_name_i)
+    
     not_conv_list <- c(not_conv_list,folder_name_i)
     HP_param_i <- c(folder_i, species_idx,n_emb_img,rep(0,7))
     all_STHP_param <- rbind(all_STHP_param,HP_param_i)
@@ -611,54 +768,57 @@ for(folder_i in 1:length(all_folders_name_short)){
     HP_alpha <- hawkes.par$par[2]
     HP_beta <- hawkes.par$par[3]
     HP_gamma <- hawkes.par$par[4]
-    Lambda.test<-STHawkesCompensator(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,gamma=HP_gamma,
-                                     t=times_i,s=col_pos_norm)#different def of compensator
-    ks.test(Lambda.test,"pexp")
     
     
+    # ## Histogram of inter-event times fitted by exponential dist
+    # #estimate the parameters for exponential dist
+    # fit_exp <- fitdistr(inter_event_time, "exponential") 
+    # hist(inter_event_time, freq = FALSE, breaks = 50, xlim = c(0, quantile(inter_event_time, 0.99)), main = "Histogram of Inter-Event Times", col = color_list[species_idx])
+    # curve(dexp(x, rate = fit_exp$estimate), from = 0, col = "red", add = TRUE)
+    # 
+    # 
+    # #The durations of the estimated residual process
+    # Lambda.test<-STHawkesCompensator(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,gamma=HP_gamma,
+    #                                  t=times_i,s=col_pos_norm)#different def of compensator
+    # 
+    # 
+    # ## QQ Plot using inter-event times
+    # p <- ppoints(100)    # 100 equally spaced points on (0,1), excluding endpoints
+    # q <- quantile(Lambda.test,p=p,na.rm=TRUE) # percentiles of the sample distribution
+    # plot(qexp(p),q, xlab="Theoretical Quantiles",ylab="Empirical Quantiles",cex.lab=1.2,
+    #       pch=1,cex=1.1,col="Black", main = "Spatio-Temporal Hawkes Process \n Q-Q Plot")
+    # qqline(q, distribution=qexp,col="Red", lty=1, lwd=2.5)
+    # 
+    # #folder name should be printed at top (side=3) of 2nd subplot
+    # mtext(folder_name_i, side=3, line=5)
+    # #https://www.r-graph-gallery.com/74-margin-and-oma-cheatsheet.html
+    # 
+    # 
+    # 
+    # ## KS Statistic
+    # ks_pp <- ks.test(Lambda.test,"pexp")
+    # # Warning message:
+    # # In ks.test(lambda_res, "pexp") :
+    # #   ties should not be present for the Kolmogorov-Smirnov test
+    # # Interpretation: The K-S test is for a "continuous distribution" and so your data should not contain any ties (repeated values).
+    # # (exponetial dist is "continuous")
+    # # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and 
+    # 
+    # ## KS Plot
+    # #empirical CDF
+    # plot(ecdf(Lambda.test),do.points=FALSE, col.01line = "white", verticals=TRUE,col="Black", lwd=3, ylim=c(0,1),
+    #     xlab= expression(paste(Lambda,"(",t[i],",",t[i+1],")")),ylab="CDF", 
+    #    main = paste("CDF of Inter-Event Times \n p-val=",round(ks_pp$p.value,2), ",\n K-S statistic (D)=",round(ks_pp$statistic,2)))
+    # #exponential CDF
+    # curve(pexp(x,1), min(Lambda.test),max(Lambda.test),col="Red", lty=1, lwd =2, add=TRUE,
+    #       xlab="Durations of the estimated residual process",ylab="CDF",cex.lab=1.2)
+    # 
+    # legend("bottomright",c("Exponential CDF","Empirical CDF"),lty=c(1,1),lwd=1,col=c("Red","Black"),
+    #        bty="n",cex=1.2)
     
-    ## Histogram of inter-event times fitted by exponential dist
-    #estimate the parameters for exponential dist
-    fit_exp <- fitdistr(inter_event_time, "exponential") 
-    hist(inter_event_time, freq = FALSE, breaks = 50, xlim = c(0, quantile(inter_event_time, 0.99)), main = "Histogram of Inter-Event Times", col = color_list[species_idx])
-    curve(dexp(x, rate = fit_exp$estimate), from = 0, col = "red", add = TRUE)
-    
-    
-    
-    
-    ## QQ Plot using inter-event times
-    p <- ppoints(100)    # 100 equally spaced points on (0,1), excluding endpoints
-    q <- quantile(Lambda.test,p=p,na.rm=TRUE) # percentiles of the sample distribution
-    plot(qexp(p),q, xlab="Theoretical Quantiles",ylab="Empirical Quantiles",cex.lab=1.2,
-          pch=1,cex=1.1,col="Black", main = "Spatio-Temporal Hawkes Process \n Q-Q Plot")
-    qqline(q, distribution=qexp,col="Red", lty=1, lwd=2.5)
-    
-    #folder name should be printed at top (side=3) of 2nd subplot
-    mtext(folder_name_i, side=3, line=5)
-    #https://www.r-graph-gallery.com/74-margin-and-oma-cheatsheet.html
-    
-    
-    
-    ## KS Statistic
-    ks_pp <- ks.test(Lambda.test,"pexp")
-    # Warning message:
-    # In ks.test(lambda_res, "pexp") :
-    #   ties should not be present for the Kolmogorov-Smirnov test
-    # Interpretation: The K-S test is for a "continuous distribution" and so your data should not contain any ties (repeated values).
-    # (exponetial dist is "continuous")
-    # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and 
-    
-    ## KS Plot
-    #empirical CDF
-    plot(ecdf(Lambda.test),do.points=FALSE, col.01line = "white", verticals=TRUE,col="Black", lwd=3, ylim=c(0,1),
-        xlab= expression(paste(Lambda,"(",t[i],",",t[i+1],")")),ylab="CDF", 
-       main = paste("CDF of Inter-Event Times \n p-val=",round(ks_pp$p.value,2), ",\n K-S statistic (D)=",round(ks_pp$statistic,2)))
-    #exponential CDF
-    curve(pexp(x,1), min(Lambda.test),max(Lambda.test),col="Red", lty=1, lwd =2, add=TRUE,
-          xlab="Durations of the estimated residual process",ylab="CDF",cex.lab=1.2)
-    
-    legend("bottomright",c("Exponential CDF","Empirical CDF"),lty=c(1,1),lwd=1,col=c("Red","Black"),
-           bty="n",cex=1.2)
+    ## Pearson Residual
+    pear_res <- Pearson_Res_STHawkes(HP_lam0,HP_alpha,HP_beta,HP_gamma,times_i,col_pos_norm)#slow because integral function is not vectorized 
+    all_STHP_pear_res <- c(all_STHP_pear_res, list(list(folder_index=folder_i,foldername=all_folders_name_short[folder_i],pearson_res=pear_res)))
     
     HP_param_i <- c(folder_i, species_idx,n_emb_img,HP_lam0,HP_alpha,HP_beta,HP_gamma,ks_pp$p.value,ks_pp$statistic,1)
     all_STHP_param <- rbind(all_STHP_param,HP_param_i)
@@ -681,11 +841,13 @@ row.names(all_STHP_param) <- all_folders_name_short[unique(all_STHP_param$folder
 all_STHP_param$not_few_emb <- 1.0
 all_STHP_param$not_few_emb[few_emb_folders] <- 0.2#determines how transparent the bar will be when plotted
 
+if(length(not_conv_list)>0){
+  print("folders didn't converge (index, foldername, number of embolized images):")
+  print(not_conv_list)
+  print(all_folders_name_short[not_conv_list])
+  print(all_STHP_param$num_emb_img[not_conv_list])
+}
 
-print("folders didn't converge (index, foldername, number of embolized images):")
-print(not_conv_list)
-print(all_folders_name_short[not_conv_list])
-print(all_STHP_param$num_emb_img[not_conv_list])
 
 
 print(all_STHP_param)
@@ -732,7 +894,7 @@ col_keep <- c("folder_index","species.x","KS_pval.y","KS_pval.x","num_emb_img.x"
 pval_2_methods <- param_2_methods[col_keep]
 colnames(pval_2_methods) <- c("folder_index","species","KS_pval_HP","KS_pval_STHP","num_emb_img","converge_HP","converge_STHP")
 pval_2_methods$incr_p_val <- pval_2_methods$KS_pval_STHP - pval_2_methods$KS_pval_HP
-#pval_2_methods <- pval_2_methods[,c(1,2,5,3,6,4,7)]#change the order of column for better printing
+row.names(pval_2_methods) <- all_folders_name_short[pval_2_methods$folder_index]
 ztable(pval_2_methods,caption="Change in P-values (Temporal vs Spatial-Temporal Hawkes Process)") %>%
     addRowColor(rows=1,bg="#C90000",color="white") %>%
     addCellColor(condition=incr_p_val>0.0,cols=incr_p_val,color="emerald") %>%
@@ -740,7 +902,117 @@ ztable(pval_2_methods,caption="Change in P-values (Temporal vs Spatial-Temporal 
     addCellColor(condition=converge_HP<=0.0,cols=converge_HP,color="red")
 ```
 
+### Paired Samples T-test on Pearson Residuals of Two Models
 
-TODO: Deviance Residual?(ref:RESIDUAL ANALYSIS METHODS FOR SPACE-TIME POINT
+
+
+```{r pearson_res_paired_t_test}
+#create a list that records all folder index in all_STHP_pear_res,all_HP_pear_res
+STHP_pear_folder_idx_map <- lapply(all_STHP_pear_res, `[[`, 1)
+HP_pear_folder_idx_map <- lapply(all_HP_pear_res, `[[`, 1)
+all_two_sided_p_val <- NULL
+all_one_sided_p_val <- NULL
+
+for(folder_i in 1:length(all_folders_name_short)){
+  folder_name_i <- all_folders_name_short[folder_i]
+  
+  
+  i_HP <- which(HP_pear_folder_idx_map==folder_i)
+  i_ST <- which(STHP_pear_folder_idx_map==folder_i)
+  
+  if(length(i_ST)>0 && length(i_HP)>0){#found in both all_STHP_pear_res,all_HP_pear_res
+    HP_pear_res <- all_HP_pear_res[[i_HP]]$pearson_res
+    STHP_pear_res <- all_STHP_pear_res[[i_ST]]$pearson_res
+    two_sided_t_test <- t.test(HP_pear_res, STHP_pear_res, paired = TRUE)#whether the mean difference (m) is equal to 0?
+    all_two_sided_p_val <- rbind(all_two_sided_p_val,c(folder_i,two_sided_t_test$estimate, two_sided_t_test$stderr,two_sided_t_test$p.value))
+    
+    one_sided_t_test <- t.test(HP_pear_res, STHP_pear_res, paired = TRUE, alternative = "greater")#alternative hypothesis: the average pearson residual of HP is greater than that of STHP
+    all_one_sided_p_val <- rbind(all_one_sided_p_val,c(folder_i,one_sided_t_test$p.value))
+    
+    
+    #print(folder_name_i)
+    #print(t_test_result)
+    
+    #plot pearson residual for 2 models together
+    num_res <- length(HP_pear_res)
+    both_pear_res = data.frame(time = c(1:num_res,1:num_res),
+                  model =  c(rep("Temporal",num_res),rep("Spatiotemporal",num_res)),
+                  groupcd= c(rep(1,num_res),rep(2,num_res)),
+                  pearson_res = c(HP_pear_res,STHP_pear_res)
+                  )
+    # #quick plot
+    fig_time <- qplot(x=time, y=pearson_res,
+           data=both_pear_res,
+           colour=model,
+           main=paste("Pearson Residuals: ",folder_name_i)) +
+      geom_line() + geom_hline(yintercept=0)  + theme(legend.position="top")
+    
+    
+    # # Plot paired data
+    # pd <- paired(HP_pear_res, STHP_pear_res)
+    # plot(pd, type = "profile") + theme_bw()
+    
+    fig_boxplot <- ggboxplot(both_pear_res, x = "model", y = "pearson_res", 
+          color = "model", palette = c("#00BFC4","#F8766D"),
+          order = c("Temporal", "Spatiotemporal"),
+          ylab = "Pearson Residuals", xlab = "Models")+ggtitle("Pearson Residuals Box Plot")
+    
+    grid.arrange(fig_time, fig_boxplot, ncol = 2)
+    
+  }else{#at least one model fitting doesn't converge for this folder
+    all_one_sided_p_val <- rbind(all_one_sided_p_val,c(folder_i,rep(NA,3)))
+  }
+  
+  if(length(i_ST)==0){
+    print(folder_name_i)
+    print("not found in all_STHP_pear_res")
+  }
+  
+  if(length(i_HP)==0){
+    print(folder_name_i)
+    print("not found in all_HP_pear_res")
+  }
+  
+
+}
+
+#convert to df
+all_one_sided_p_val_df <- data.frame(all_one_sided_p_val)
+colnames(all_one_sided_p_val_df) <- c("folder_index","one_sided_p_val")
+
+all_two_sided_p_val_df <- data.frame(all_two_sided_p_val)
+colnames(all_two_sided_p_val_df) <- c("folder_index","est_mean","std_err","two_sided_p_val")
+```
+
+Null Hypothesis: 
+
++ Two-sided: whether the mean difference (of STHP-HP paired value) is equal to 0?
+
++ One-sided: whether the mean difference is less than 0? (alternative hypothesis is mean difference greater than 0)
+
+```{r, results="asis"}
+folder_idx_species <- all_STHP_param[c("folder_index","species")]#want to include species in the table below
+t_test_pvals_no_species <- merge(all_two_sided_p_val_df,all_one_sided_p_val_df,by="folder_index",all.x = TRUE,all.y=TRUE)#all.x = TRUE,all.y=TRUE keep NA (at least on model doesn't converge)
+t_test_pvals <- merge(folder_idx_species,t_test_pvals_no_species, by="folder_index")
+row.names(t_test_pvals) <- all_folders_name_short[t_test_pvals$folder_index]
+
+ztable(t_test_pvals,caption="Change in P-values of Paired T-test (Temporal vs Spatial-Temporal Hawkes Process)") %>%
+    addRowColor(rows=1,bg="#C90000",color="white") %>%
+    addCellColor(condition=two_sided_p_val>0.05,cols=two_sided_p_val,color="blue") %>%
+    addCellColor(condition=one_sided_p_val<=0.05,cols=one_sided_p_val,color="emerald") %>%
+    addCellColor(condition=(abs(std_err)<=5e-3 & abs(est_mean)<=5e-3 ),cols=c(std_err,est_mean),color="lightblue") 
+```
+
+If p-value > 0.05 for two-sided paired t-test (highlighted in blue), we fail to reject the null hypothesis that the pearson residuals of two models are not statistically significantly different.
+
+If p-value <= 0.05 for one-sided paired t-test (highlighted in green), we reject the null hypothesis that the pearson residuals of temporal Hawkes process is smaller than that of spatiotemporal model.
+
+If both estimated mean difference and standard deviation are close to 0 (rounded to zero in the table because absolute value < 0.005), it means the pearson residuals are roughly the same for 2 models, they're highlighted in lightblue.
+
+
+In short, blue implys where two models perform similarly, and green are for cases where spatiotemporal outperforms temporal Hawkes process model.
+
+TODO: Pearson Residual for STHP
+Deviance Residual?(ref:RESIDUAL ANALYSIS METHODS FOR SPACE-TIME POINT
 PROCESSES 4.3) or R test? (ref:Assessment of Point Process Models for
 Earthquake Forecasting)
