--- a/analysis/Point_process/Point_Process.Rmd
+++ b/analysis/Point_process/Point_Process.Rmd
@@ -704,9 +704,9 @@ all_STHP_param <- NULL
 not_conv_list <- NULL
 all_STHP_pear_res <- NULL
 for(folder_i in 1:length(all_folders_name_short)){
-  # if(folder_i%%max_plot_row==1){# a new fig
-  #   par(mfrow=c(max_plot_row,3),mar=c(5,4,7,3))#,oma = c(0, 0, 2, 0))# outer margin area (bottom,left,top,right)
-  # }
+  if(folder_i%%max_plot_row==1){# a new fig
+    par(mfrow=c(max_plot_row,3),mar=c(5,4,7,3))#,oma = c(0, 0, 2, 0))# outer margin area (bottom,left,top,right)
+  }
   folder_name_i<- all_folders_name_short[folder_i]
   inter_event_dist_time <- all_inter_event_dist_time[all_inter_event_dist_time$folder_name == folder_name_i,]
   inter_event_time <- inter_event_dist_time$inter_event_time.min.
@@ -770,51 +770,51 @@ for(folder_i in 1:length(all_folders_name_short)){
     HP_gamma <- hawkes.par$par[4]
     
     
-    # ## Histogram of inter-event times fitted by exponential dist
-    # #estimate the parameters for exponential dist
-    # fit_exp <- fitdistr(inter_event_time, "exponential") 
-    # hist(inter_event_time, freq = FALSE, breaks = 50, xlim = c(0, quantile(inter_event_time, 0.99)), main = "Histogram of Inter-Event Times", col = color_list[species_idx])
-    # curve(dexp(x, rate = fit_exp$estimate), from = 0, col = "red", add = TRUE)
-    # 
-    # 
-    # #The durations of the estimated residual process
-    # Lambda.test<-STHawkesCompensator(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,gamma=HP_gamma,
-    #                                  t=times_i,s=col_pos_norm)#different def of compensator
-    # 
-    # 
-    # ## QQ Plot using inter-event times
-    # p <- ppoints(100)    # 100 equally spaced points on (0,1), excluding endpoints
-    # q <- quantile(Lambda.test,p=p,na.rm=TRUE) # percentiles of the sample distribution
-    # plot(qexp(p),q, xlab="Theoretical Quantiles",ylab="Empirical Quantiles",cex.lab=1.2,
-    #       pch=1,cex=1.1,col="Black", main = "Spatio-Temporal Hawkes Process \n Q-Q Plot")
-    # qqline(q, distribution=qexp,col="Red", lty=1, lwd=2.5)
-    # 
-    # #folder name should be printed at top (side=3) of 2nd subplot
-    # mtext(folder_name_i, side=3, line=5)
-    # #https://www.r-graph-gallery.com/74-margin-and-oma-cheatsheet.html
-    # 
-    # 
-    # 
-    # ## KS Statistic
-    # ks_pp <- ks.test(Lambda.test,"pexp")
-    # # Warning message:
-    # # In ks.test(lambda_res, "pexp") :
-    # #   ties should not be present for the Kolmogorov-Smirnov test
-    # # Interpretation: The K-S test is for a "continuous distribution" and so your data should not contain any ties (repeated values).
-    # # (exponetial dist is "continuous")
-    # # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and 
-    # 
-    # ## KS Plot
-    # #empirical CDF
-    # plot(ecdf(Lambda.test),do.points=FALSE, col.01line = "white", verticals=TRUE,col="Black", lwd=3, ylim=c(0,1),
-    #     xlab= expression(paste(Lambda,"(",t[i],",",t[i+1],")")),ylab="CDF", 
-    #    main = paste("CDF of Inter-Event Times \n p-val=",round(ks_pp$p.value,2), ",\n K-S statistic (D)=",round(ks_pp$statistic,2)))
-    # #exponential CDF
-    # curve(pexp(x,1), min(Lambda.test),max(Lambda.test),col="Red", lty=1, lwd =2, add=TRUE,
-    #       xlab="Durations of the estimated residual process",ylab="CDF",cex.lab=1.2)
-    # 
-    # legend("bottomright",c("Exponential CDF","Empirical CDF"),lty=c(1,1),lwd=1,col=c("Red","Black"),
-    #        bty="n",cex=1.2)
+    ## Histogram of inter-event times fitted by exponential dist
+    #estimate the parameters for exponential dist
+    fit_exp <- fitdistr(inter_event_time, "exponential")
+    hist(inter_event_time, freq = FALSE, breaks = 50, xlim = c(0, quantile(inter_event_time, 0.99)), main = "Histogram of Inter-Event Times", col = color_list[species_idx])
+    curve(dexp(x, rate = fit_exp$estimate), from = 0, col = "red", add = TRUE)
+
+
+    #The durations of the estimated residual process
+    Lambda.test<-STHawkesCompensator(lambda0=HP_lam0,alpha=HP_alpha,beta=HP_beta,gamma=HP_gamma,
+                                     t=times_i,s=col_pos_norm)#different def of compensator
+
+
+    ## QQ Plot using inter-event times
+    p <- ppoints(100)    # 100 equally spaced points on (0,1), excluding endpoints
+    q <- quantile(Lambda.test,p=p,na.rm=TRUE) # percentiles of the sample distribution
+    plot(qexp(p),q, xlab="Theoretical Quantiles",ylab="Empirical Quantiles",cex.lab=1.2,
+          pch=1,cex=1.1,col="Black", main = "Spatio-Temporal Hawkes Process \n Q-Q Plot")
+    qqline(q, distribution=qexp,col="Red", lty=1, lwd=2.5)
+
+    #folder name should be printed at top (side=3) of 2nd subplot
+    mtext(folder_name_i, side=3, line=5)
+    #https://www.r-graph-gallery.com/74-margin-and-oma-cheatsheet.html
+
+
+
+    ## KS Statistic
+    ks_pp <- ks.test(Lambda.test,"pexp")
+    # Warning message:
+    # In ks.test(lambda_res, "pexp") :
+    #   ties should not be present for the Kolmogorov-Smirnov test
+    # Interpretation: The K-S test is for a "continuous distribution" and so your data should not contain any ties (repeated values).
+    # (exponetial dist is "continuous")
+    # statistic (D): sup |F_n(x)-F(x)|: supreme of absolute difference of empirical CDF and
+
+    ## KS Plot
+    #empirical CDF
+    plot(ecdf(Lambda.test),do.points=FALSE, col.01line = "white", verticals=TRUE,col="Black", lwd=3, ylim=c(0,1),
+        xlab= expression(paste(Lambda,"(",t[i],",",t[i+1],")")),ylab="CDF",
+       main = paste("CDF of Inter-Event Times \n p-val=",round(ks_pp$p.value,2), ",\n K-S statistic (D)=",round(ks_pp$statistic,2)))
+    #exponential CDF
+    curve(pexp(x,1), min(Lambda.test),max(Lambda.test),col="Red", lty=1, lwd =2, add=TRUE,
+          xlab="Durations of the estimated residual process",ylab="CDF",cex.lab=1.2)
+
+    legend("bottomright",c("Exponential CDF","Empirical CDF"),lty=c(1,1),lwd=1,col=c("Red","Black"),
+           bty="n",cex=1.2)
     
     ## Pearson Residual
     pear_res <- Pearson_Res_STHawkes(HP_lam0,HP_alpha,HP_beta,HP_gamma,times_i,col_pos_norm)#slow because integral function is not vectorized 
